--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
     "name": "shopping-list",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
     "scripts": {
-        "dev": "bun build ./index.tsx --outdir ./docs --watch",
-        "serve": "bun run ./server.ts",
-        "watch": "bun test --watch"
-    },
-    "devDependencies": {
-        "@types/react": "^18.2.28",
-        "@types/react-dom": "^18.2.13",
-        "bun-types": "latest"
-    },
-    "peerDependencies": {
-        "typescript": "^5.0.0"
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
-        "classnames": "^2.3.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "pinia": "^2.1.7",
+        "vue": "^3.4.15"
+    },
+    "devDependencies": {
+        "@types/node": "^20.11.19",
+        "@vitejs/plugin-vue": "^5.0.3",
+        "localforage": "^1.10.0",
+        "typescript": "^5.2.2",
+        "vite": "^5.1.0",
+        "vue-tsc": "^1.8.27"
     }
 }
