--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,32 @@
 {
     "compilerOptions": {
-        "downlevelIteration": true,
-        "esModuleInterop": true,
-        "exactOptionalPropertyTypes": true,
-        "jsx": "react-jsx",
-        "noPropertyAccessFromIndexSignature": true,
+        "target": "ES2020",
+        "useDefineForClassFields": true,
+        "module": "ESNext",
+        "lib": ["ES2020", "DOM", "DOM.Iterable"],
+        "skipLibCheck": true,
+
+        /* Bundler mode */
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "preserve",
+
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
         "noUncheckedIndexedAccess": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "exactOptionalPropertyTypes": true,
+
         "paths": {
             "@/*": ["./src/*"]
-        },
-        "strict": true,
-        "types": ["bun-types"]
-    }
+        }
+    },
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+    "references": [{ "path": "./tsconfig.node.json" }]
 }
